--- a/operation-firebird/src/css/app.scss
+++ b/operation-firebird/src/css/app.scss
@@ -1,15 +1,12 @@
 .q-drawer {
-  
     .q-item {
-        opacity: 0.6;
-    
+        opacity: 0.8;
   &.q-router-link--exact-active {
     opacity: 1;
-    color: rgb(255, 36, 73);
+    background-color: white;
     }
   }
 }
-
 
 .row {
     flex-wrap: nowrap;
@@ -23,15 +20,47 @@
     padding-left: 9rem;
 }
 
+.q-toolbar {
+    padding-left: 0;
+}
+
 .top-border {
   border-top: 1px solid rgba(255,255,255,0.3);
 }
 
 .experience-section {
-    max-width: 1000px;
+    max-width: 950px;
 }
 
 .q-layout-padding {
     padding: 24px;
     padding-top: 0; 
+}
+
+.surname {
+    font-weight: bold;
+    font-size: larger;
+}
+
+:v-deep .no-underline {
+    text-decoration: lime;
+}
+
+.bullet-points {
+    max-width: 32rem;
+}
+
+.arrow-outward-icon {
+    font-size: x-small;
+    padding-left: 0.2rem;
+    padding-bottom: 0.3rem;
+}
+
+:v-deep .q-header {
+    transition-duration: 0.3s !important;
+}
+
+:v-deep .q-drawer,
+:v-deep .q-header {
+    transition-timing-function: ease-out !important;
 }
