--- a/operation-firebird/src/css/app.scss
+++ b/operation-firebird/src/css/app.scss
@@ -75,3 +75,20 @@
   border-radius: 0 !important;
   text-align: center;
 }
+
+.code-container {
+  color: #dcdcdc;
+  padding-bottom: .75rem;
+  height: 250px; 
+  width: 100%; 
+  margin-top: -0.5rem; 
+  font-size: 0.7rem;
+}
+
+.project-gif {
+    max-width: 750px;
+}
+
+.scroll {
+    overflow: hidden;
+}
